# loomweave

./: .filigree.conf  .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  LICENSE  README.md  clarion.yaml  deny.toml  index.html  loomweave.yaml  sitemap.xml  wardline.yaml
.clarion/: .gitignore  instance_id
crates/clarion-analysis/: Cargo.toml
crates/clarion-analysis/src/: lib.rs
crates/clarion-cli/: Cargo.toml
crates/clarion-cli/src/: analyze.rs  analyze_lock.rs  cli.rs  clustering.rs  config.rs  db.rs  doctor.rs  guidance.rs  hook.rs  hooks_settings.rs  http_read.rs  install.rs  instance.rs  integration_bindings.rs  main.rs  mcp_registration.rs  project_lock.rs  run_lifecycle.rs  sarif.rs  secret_scan.rs  sei_git.rs  serve.rs  skill_pack.rs  wardline_guidance.rs
crates/clarion-cli/src/http_read/: auth.rs  errors.rs  files.rs  identity.rs  linkages.rs  test_support.rs  wardline.rs
crates/clarion-cli/src/secret_scan/: anchors.rs  baseline.rs  files.rs  findings.rs
crates/clarion-cli/tests/: analyze.rs  analyze_failure_modes.rs  db.rs  discovery_co_located.rs  doctor.rs  guidance.rs  hook.rs  install.rs  project_lock.rs  sarif.rs  secret_scan.rs  serve.rs  skills.rs  wp1_e2e.rs  wp2_e2e.rs
crates/clarion-federation/: Cargo.toml
crates/clarion-federation/src/: config.rs  filigree.rs  filigree_url.rs  scan_results.rs
crates/clarion-mcp/: Cargo.toml
crates/clarion-mcp/src/: analyze_runs.rs  config.rs  filigree.rs  filigree_url.rs  index_diff.rs  lib.rs  scan_results.rs  snapshot.rs  wardline_reconcile.rs
crates/clarion-mcp/src/catalogue/: faceted.rs  inspection.rs  mod.rs  semantic.rs  shortcuts.rs
crates/clarion-mcp/src/tools/: analyze.rs  graph.rs  orientation.rs  status.rs  summary.rs
crates/clarion-mcp/tests/: analyze_lifecycle.rs  catalogue_tools.rs  storage_tools.rs
crates/clarion-plugin-fixture/: Cargo.toml
crates/clarion-plugin-fixture/src/: main.rs
crates/clarion-storage/: Cargo.toml
crates/clarion-storage/migrations/: 0001_initial_schema.sql  0002_briefing_blocked.sql  0003_wardline_taint_facts.sql  0004_sei_prior_index.sql  0005_sei.sql  0006_wardline_taint_sei.sql  0008_run_owner_heartbeat.sql
crates/clarion-storage/src/: cache.rs  commands.rs  embeddings.rs  error.rs  glob.rs  guidance.rs  lib.rs  pragma.rs  prior_index.rs  query.rs  reader.rs  retry.rs  runs.rs  schema.rs  sei.rs  unresolved.rs  wardline_taint.rs  writer.rs
crates/clarion-storage/tests/: guidance_write.rs  llm_cache.rs  query_helpers.rs  reader_pool.rs  schema_apply.rs  sei_conformance_oracle.rs  writer_actor.rs
crates/loomweave-cli/: Cargo.toml  pyproject.toml
crates/loomweave-cli/assets/instructions/: loomweave.md
crates/loomweave-cli/src/: analyze.rs  analyze_lock.rs  cli.rs  config.rs  db.rs  doctor.rs  guidance.rs  hook.rs  hooks_settings.rs  http_read.rs  install.rs  instance.rs  instructions.rs  integration_bindings.rs  main.rs  mcp_registration.rs  run_lifecycle.rs  sarif.rs  secret_scan.rs  sei_git.rs  serve.rs  skill_pack.rs  wardline_guidance.rs
crates/loomweave-cli/src/analyze/: duplicate_guard.rs
crates/loomweave-cli/src/http_read/: auth.rs  errors.rs  files.rs  identity.rs  linkages.rs  test_support.rs  wardline.rs
crates/loomweave-cli/src/secret_scan/: anchors.rs  baseline.rs  files.rs  findings.rs
crates/loomweave-cli/tests/: analyze.rs  analyze_failure_modes.rs  analyze_hardening.rs  config.rs  db.rs  discovery_co_located.rs  doctor.rs  duplicate_locator.rs  guidance.rs  hook.rs  install.rs  sarif.rs  secret_scan.rs  serve.rs  skills.rs  wp1_e2e.rs  wp2_e2e.rs
crates/loomweave-core/: Cargo.toml
crates/loomweave-core/src/: embedding_provider.rs  entity_id.rs  errors.rs  hardened_git.rs  lib.rs  llm_provider.rs  store.rs
crates/loomweave-core/src/plugin/: breaker.rs  discovery.rs  host.rs  host_findings.rs  host_validate.rs  jail.rs  limits.rs  manifest.rs  mock.rs  mod.rs  protocol.rs  transport.rs
crates/loomweave-core/tests/: host_subprocess.rs
crates/loomweave-core/tests/fixtures/: plugin.toml
crates/loomweave-federation/: Cargo.toml
crates/loomweave-federation/src/: config.rs  filigree.rs  filigree_url.rs  lib.rs  loomweave_port.rs  loomweave_url.rs  scan_results.rs  warpline.rs
crates/loomweave-federation/tests/: scan_results_wire_conformance_oracle.rs
crates/loomweave-llm/: Cargo.toml
crates/loomweave-llm/src/: lib.rs  llm_provider.rs
crates/loomweave-mcp/: Cargo.toml
crates/loomweave-mcp/src/: analyze_runs.rs  config.rs  filigree.rs  filigree_url.rs  index_diff.rs  lib.rs  scan_results.rs  snapshot.rs  wardline_reconcile.rs  warpline.rs
crates/loomweave-mcp/src/catalogue/: faceted.rs  inspection.rs  mod.rs  semantic.rs  shortcuts.rs
crates/loomweave-mcp/tests/: analyze_lifecycle.rs  catalogue_tools.rs  entity_associations_conformance_oracle.rs  issue_detail_conformance_oracle.rs  storage_tools.rs  warpline_churn_consumer.rs
crates/loomweave-plugin-fixture/: Cargo.toml
crates/loomweave-plugin-fixture/src/: main.rs
crates/loomweave-plugin-rust/: Cargo.toml  plugin.toml
crates/loomweave-plugin-rust/examples/: qualname_check.rs
crates/loomweave-plugin-rust/src/: calls.rs  crate_roots.rs  derives.rs  edges.rs  extract.rs  lib.rs  main.rs  module_path.rs  mounts.rs  parse_guard.rs  qualname.rs  references.rs  resolve.rs  root_tags.rs  scope.rs  serve.rs  signature.rs  spans.rs  symbol_table.rs
crates/loomweave-plugin-rust/tests/: analyze_e2e.rs  calls_edges.rs  calls_envelope_audit.rs  derives_edges.rs  dogfood_uniqueness.rs  entity_id_parity.rs  host_integration.rs  identity_stability.rs  identity_uniqueness.rs  impl_entity.rs  implements_edges.rs  imports_edges.rs  leaf_kinds.rs  parse_guard_e2e.rs  qualname_conformance.rs  references_edges.rs  resolve.rs  root_tags.rs  sei_signatures.rs
crates/loomweave-scanner/: Cargo.toml
crates/loomweave-scanner/src/: lib.rs  patterns.rs
crates/loomweave-scanner/tests/: scanner.rs
packaging/rust-plugin-dist/: Cargo.toml  README.md  pyproject.toml
packaging/rust-plugin-dist/src/: main.rs
(+575 files in other folders)
