[workspace]
resolver = "3"
members = [
    "crates/loomweave-analysis",
    "crates/loomweave-core",
    "crates/loomweave-federation",
    "crates/loomweave-storage",
    "crates/loomweave-cli",
    "crates/loomweave-mcp",
    "crates/loomweave-plugin-fixture",
    "crates/loomweave-scanner",
]

[workspace.package]
version = "1.1.0-rc1"
edition = "2024"
license = "MIT"
repository = "https://github.com/foundryside-dev/loomweave"
rust-version = "1.88"

[workspace.lints.rust]
# Changed from "forbid" to "deny" to allow the single documented unsafe use:
# `CommandExt::pre_exec` in plugin/host.rs calls `apply_prlimit_as` (which
# calls `setrlimit(2)`, POSIX async-signal-safe) in the forked child.
# All unsafe blocks must carry a SAFETY comment justifying the usage.
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pragmatic allows per ADR-023 — revisit per WP if the floor gets too loud.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
blake3 = "1.8.5"
clap = { version = "4", features = ["derive"] }
deadpool-sqlite = { version = "0.8", features = ["rt_tokio_1"] }
dotenvy = "0.15"
fs2 = "0.4"
hmac = "0.12"
ignore = "0.4"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_norway = "0.9.42"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2.6"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6", features = ["catch-panic", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
which = "6"
xgraph = "2.0.0"
assert_cmd = "2"
tempfile = "3"
nix = { version = "0.28", default-features = false, features = ["resource"] }
