[package]
name = "clarion-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
sha2.workspace = true
xgraph.workspace = true
