[package]
name = "clarion-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clarion-core = { path = "../clarion-core", version = "0.1.0-dev" }
clarion-storage = { path = "../clarion-storage", version = "0.1.0-dev" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
