[package]
name = "clarion-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
clarion-core = { path = "../clarion-core", version = "0.1.0-dev" }
clarion-storage = { path = "../clarion-storage", version = "0.1.0-dev" }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
