[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "loomweave"
version = "1.1.0rc5"
description = "Loomweave — graph-aware code archaeology (Rust core)"
readme = "../../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "John Morrissey", email = "qacona@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
# Both language plugins are hard dependencies: a `pip install loomweave` lands
# their console binaries in the same venv `bin/` as `loomweave`, where exe-dir
# discovery finds them (each with its manifest under share/loomweave/plugins/).
# This makes Rust analysis on-by-default, mirroring Python. To make Rust opt-in
# instead, move loomweave-plugin-rust to an [project.optional-dependencies]
# `rust` extra (installed via `loomweave[rust]`).
dependencies = [
    "loomweave-plugin-python==1.1.0rc5",
    "loomweave-plugin-rust==1.1.0rc5",
]

[project.urls]
Repository = "https://github.com/foundryside-dev/loomweave"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
bins = ["loomweave"]
strip = true
