[package]
name = "loomweave-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
fs2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
nix = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
