[package]
name = "loomweave-core"
description = "Loomweave core: entity-ID assembler, sandboxed JSON-RPC plugin host, and manifest parser."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
nix = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
