[package]
name = "loomweave-federation"
description = "Loomweave federation: shared HTTP types and config for Filigree/Wardline sibling exchange."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
loomweave-core = { path = "../loomweave-core", version = "1.2.0" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
