[package]
name = "loomweave-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
loomweave-core = { path = "../loomweave-core", version = "1.1.0-rc7" }
loomweave-federation = { path = "../loomweave-federation", version = "1.1.0-rc7" }
loomweave-storage = { path = "../loomweave-storage", version = "1.1.0-rc7" }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal"] }

[dev-dependencies]
tempfile.workspace = true
