[package]
name = "loomweave-scanner"
description = "Loomweave scanner: pre-ingest secret scanner (entropy + pattern + baseline)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_norway.workspace = true
sha1.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
